--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 body {
     font-family: Roboto, sans-serif;
 }
+h3 {
+    margin-block-start: 0;
+    margin-block-end: 0.7em;
+}
 
 @media (max-width: 768px) {
 
@@ -45,11 +49,9 @@ body {
 }
 
 .table {
-    margin-top: 5%;
-    column-count: 2;
+    margin-top: 5%; 
     display: flex;
-    justify-content: center;
-    height: 700px;
+    justify-content: center; 
     justify-self: anchor-center;
 }
 
@@ -60,6 +62,7 @@ body {
     flex-direction: column;
     text-align: center;
     min-width: 40%;
+    max-width: 60%;
 }
 
 .botCard {
@@ -109,6 +112,7 @@ body {
     font-size: 16px;
     margin-bottom: 8px;
     margin-top: 10px;
+    font-weight: 100;
 }
 
 .start-btn {
@@ -181,11 +185,11 @@ body {
 }
 
 .carousel {
+    height: 220px;
     margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
     font-weight: bold;
     width: 330px;
     position: relative;
@@ -196,7 +200,7 @@ body {
     transform: scale(1.05);
 }
 
-#carousel-text {
+.carousel-text {
     font-weight: 100;
     cursor: pointer;
     color: rgba(255, 255, 255, 0.851);
@@ -206,7 +210,7 @@ body {
     /* Растягиваем текст по ширине контейнера */
     transform: translateX(0%);
     /* Начинает справа */
-    opacity: 1;
+    opacity: 0;
     transition:
         transform 0.6s ease-out,
         opacity 0.6s ease-out;
@@ -220,25 +224,25 @@ body {
     filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.5));
 }
 
-.card {
-    width: 300px;
-    height: 200px;
+.faq {
+    margin-top: 100px;
+    width: 420px;  
+}
+.faqCard { 
+    padding: 30px;
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 20px;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
+    white-space: normal;
     color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
+    text-wrap-style: balance;
+    text-align: start;
+    margin-top: 20px;
 }
 
-.card:hover {
+.faqCard:hover {
     transform: scale(1.05);
 }
 
