--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,19 @@ h3 {
     margin-block-end: 0.7em;
 }
 
-
+@media (max-width: 768px) {
+ 
+    html,
+    body {
+        overflow-x: hidden;
+    } 
+    
+    .botCard {
+        padding: 0;
+        width: auto;
+        min-width: auto;
+    }
+}
 .backGround {
     z-index: -1;
     position: fixed;
@@ -195,6 +207,9 @@ h3 {
         transform 0.6s ease-out,
         opacity 0.6s ease-out;
 
+}
+.carousel-text .rolled {
+    opacity: 0
 }
 
 .phone {
